--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
@@ -28,6 +28,15 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>${commons-compress.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
