--- a/filebeat-spring-boot-starter-parent/pom.xml
+++ b/filebeat-spring-boot-starter-parent/pom.xml
@@ -20,6 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+		<commons-compress.version>1.8</commons-compress.version>
 	</properties>
 
 	<modules>
