--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>${commons-compress.version}</version>
