--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/src/main/resources/filebeat.properties
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/src/main/resources/filebeat.properties
@@ -1,3 +1,4 @@
 filebeat.version=6.5.4
-filebeat.linuxDownloadUrl=https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${filebeat.version}-linux-x86.tar.gz
+filebeat.osVersion=linux-x86
+filebeat.linuxDownloadUrl=https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${filebeat.version}-{filebeat.osVersion}.tar.gz
 filebeat.downloadFilename=filebeat-linux-x86.tar.gz
