--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
@@ -28,6 +28,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
