--- a/filebeat-spring-boot-starter-parent/pom.xml
+++ b/filebeat-spring-boot-starter-parent/pom.xml
@@ -21,6 +21,7 @@
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
 		<commons-compress.version>1.8</commons-compress.version>
+		<hibernate-validator.version>6.0.16.Final</hibernate-validator.version>
 	</properties>
 
 	<modules>
