--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.jba</groupId>
 		<artifactId>filebeat-spring-boot-starter-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<groupId>com.jba.boot.filebeat</groupId>
 	<artifactId>filebeat-spring-boot-autoconfigure</artifactId>
