--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/pom.xml
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/pom.xml
@@ -18,6 +18,7 @@
 		<frontend-maven-plugin.version>1.7.6</frontend-maven-plugin.version>
 		<node.version>v8.11.3</node.version>
 		<npm.version>6.3.0</npm.version>
+		<filebeat-spring-boot-starter.version>1.0.0</filebeat-spring-boot-starter.version>
 		<!-- Fabric8 -->
 		<io.fabric8.skip>false</io.fabric8.skip>
 		<io.fabric8.dockerHost>http://127.0.0.1:2375</io.fabric8.dockerHost>
@@ -59,10 +60,29 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.jba.boot.filebeat</groupId>
+			<artifactId>filebeat-spring-boot-starter</artifactId>
+			<version>${filebeat-spring-boot-starter.version}</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox-swagger2.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox-swagger2.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
