--- a/filebeat-spring-boot-starter-parent/pom.xml
+++ b/filebeat-spring-boot-starter-parent/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.jba</groupId>
 	<artifactId>filebeat-spring-boot-starter-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>filebeat-spring-boot-starter-parent</name>
 	<description>Filebeat Spring Boot parent project</description>
 	<packaging>pom</packaging>
