fixed most of the issues

--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/src/main/resources/filebeatStarter.properties
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/src/main/resources/filebeatStarter.properties
@@ -1,4 +1,4 @@
-filebeat.starter.version=6.5.4
-filebeat.starter.osVersion=linux-x86
-filebeat.starter.linuxDownloadUrl=https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${filebeat.version}-{filebeat.osVersion}.tar.gz
-filebeat.starter.downloadFilename=filebeat-linux-x86.tar.gz
+filebeat-starter.version=6.5.4
+filebeat-starter.osVersion=linux-x86
+filebeat-starter.linuxDownloadUrl=https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${filebeat-starter.version}-{filebeat-starter.osVersion}.tar.gz
+filebeat-starter.downloadFilename=filebeat-linux-x86.tar.gz
