--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application.properties
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+filebeat.inputs.type = log
+filebeat.inputs.enabled = true
+filebeat.inputs.paths = /tmp/filebeat-starter-sampleapp.log
+filebeat.outputKafka.enabled = true    
+filebeat.outputKafka.hosts = 0.0.0.0:19092
+filebeat.outputKafka.topic = logs
+filebeat.outputKafka.requiredAcks = 1
+filebeat.outputKafka.partition.reachableOnly = false
