--- a/filebeat-spring-boot-starter-parent/doc/filebeat.properties
+++ b/filebeat-spring-boot-starter-parent/doc/filebeat.properties
@@ -7,8 +7,8 @@ filebeat.inputs.excludeFiles = ['.gz$']
 filebeat.inputs.multiline.pattern = [
 filebeat.inputs.multiline.negate = true
 filebeat.outputKafka.enabled=true    
-filebeat.outputKafka.hosts[0]: "0.0.0.0:19092"
-filebeat.outputKafka.topic: 'logs'
-filebeat.outputKafka.partitionRoundRobinReachableOnly: false
-filebeat.outputKafka.requiredAcks: 1
-filebeat.outputKafka.maxMessageBytes: 1000000
+filebeat.outputKafka.hosts[0]= 0.0.0.0:19092
+filebeat.outputKafka.topic= logs
+filebeat.outputKafka.partitionRoundRobinReachableOnly= false
+filebeat.outputKafka.requiredAcks= 1
+filebeat.outputKafka.maxMessageBytes= 1000000
