fixed for windows

--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/src/main/resources/filebeatStarter.properties
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/src/main/resources/filebeatStarter.properties
@@ -1,4 +1,11 @@
-filebeat-starter.version=6.5.4
-filebeat-starter.osVersion=linux-x86
-filebeat-starter.linuxDownloadUrl=https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${filebeat-starter.version}-{filebeat-starter.osVersion}.tar.gz
-filebeat-starter.downloadFilename=filebeat-linux-x86.tar.gz
+filebeat-starter.version=7.3.1
+filebeat-starter.linuxVersion=linux-x86_64
+filebeat-starter.windowsVersion=windows-x86_64
+filebeat-starter.macVersion=darwin-x86_64
+filebeat-starter.linuxDownloadUrl=https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${filebeat-starter.version}-${filebeat-starter.linuxVersion}.tar.gz
+filebeat-starter.windowsDownloadUrl=https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${filebeat-starter.version}-${filebeat-starter.windowsVersion}.zip
+filebeat-starter.macDownloadUrl=https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${filebeat-starter.version}-${filebeat-starter.macVersion}.zip
+filebeat-starter.linuxDownloadFilename=filebeat-${filebeat-starter.version}-${filebeat-starter.linuxVersion}.tar.gz
+filebeat-starter.windowsDownloadFilename=filebeat-${filebeat-starter.version}-${filebeat-starter.windowsVersion}.zip
+filebeat-starter.macDownloadFilename=filebeat-${filebeat-starter.version}-${filebeat-starter.macVersion}.zip
+
