--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application.properties
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application.properties
@@ -6,3 +6,5 @@ filebeat.outputKafka.hosts = 0.0.0.0:19092
 filebeat.outputKafka.topic = logs
 filebeat.outputKafka.requiredAcks = 1
 filebeat.outputKafka.partition.reachableOnly = false
+filebeat-starter.fileBeatInstalledBaseDir = E://filebeat
+filebeat-starter.fileBeatConfigDir = E://filebeat
