--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-autoconfigure/pom.xml
@@ -37,6 +37,14 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna-platform</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
