--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application-unix.properties
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application-unix.properties
@@ -1,13 +1,11 @@
-spring.profiles.active=@spring.profiles.active@
-spring.application.name=SampleApp
 filebeat.inputs[0].type = log
 filebeat.inputs[0].enabled = true
-filebeat.inputs[0].paths = E://filebeat/filebeat-starter-sampleapp.log
+filebeat.inputs[0].paths = /home/ec2_user/sampleapp/logs/filebeat-starter-sampleapp.log
 filebeat.outputKafka.enabled = true    
 filebeat.outputKafka.hosts = 0.0.0.0:19092
 filebeat.outputKafka.topic = logs
 filebeat.outputKafka.requiredAcks = 1
 filebeat.outputKafka.maxMessageBytes = 1000000
 filebeat.outputKafka.partition.reachableOnly = false
-filebeat-starter.fileBeatInstalledBaseDir = E://filebeat
-filebeat-starter.fileBeatConfigDir = E://filebeat
+filebeat-starter.fileBeatInstalledBaseDir = /home/ec2_user/filebeat
+filebeat-starter.fileBeatConfigDir = /home/ec2_user/filebeat
