docker and kube support

--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application-docker.properties
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application-docker.properties
@@ -1,6 +1,8 @@
+logging.path=/tmp/sampleapp/logs
+logging.file=${logging.path}/filebeat-starter-sampleapp.log
 filebeat.inputs[0].type = log
 filebeat.inputs[0].enabled = true
-filebeat.inputs[0].paths = /tmp/logs/filebeat-starter-sampleapp.log
+filebeat.inputs[0].paths = ${logging.file}
 filebeat.outputKafka.enabled = true    
 filebeat.outputKafka.hosts = 0.0.0.0:19092
 filebeat.outputKafka.topic = logs
