--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application.properties
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.profiles.active=@spring.profiles.active@
-spring.application.name=SampleApp
+spring.application.name=filebeat-starter-sampleapp
+server.port=5050
+logging.path=E://filebeat
+logging.file=${logging.path}/filebeat-starter-sampleapp.log
 filebeat.inputs[0].type = log
 filebeat.inputs[0].enabled = true
-filebeat.inputs[0].paths = E://filebeat/filebeat-starter-sampleapp.log
+filebeat.inputs[0].paths = ${logging.file}
 filebeat.outputKafka.enabled = true    
 filebeat.outputKafka.hosts = 0.0.0.0:19092
 filebeat.outputKafka.topic = logs
