--- a/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/pom.xml
+++ b/filebeat-spring-boot-starter-parent/filebeat-spring-boot-starter-sample-app/pom.xml
@@ -21,21 +21,33 @@
 			</activation>
 			<properties>
 				<spring.profiles.active>windows</spring.profiles.active>
+				<skip.docker.build>true</skip.docker.build>
+				<skip.npm.build>true</skip.npm.build>
+				<skip.sonar.build>true</skip.sonar.build>
+				<skip.kube.build>true</skip.kube.build>
 			</properties>
 		</profile>
 		<profile>
 			<id>unix</id>
 			<properties>
 				<spring.profiles.active>unix</spring.profiles.active>
+				<skip.docker.build>true</skip.docker.build>
+				<skip.npm.build>false</skip.npm.build>
+				<skip.sonar.build>false</skip.sonar.build>
+				<skip.kube.build>true</skip.kube.build>
 			</properties>
 		</profile>
 		<profile>
 			<id>docker</id>
 			<properties>
 				<spring.profiles.active>docker</spring.profiles.active>
+				<skip.docker.build>false</skip.docker.build>
+				<skip.npm.build>false</skip.npm.build>
+				<skip.sonar.build>false</skip.sonar.build>
+				<skip.kube.build>false</skip.kube.build>
 			</properties>
 		</profile>
-		
+
 	</profiles>
 
 	<properties>
@@ -126,6 +138,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>filebeat-starter-sampleapp</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -150,6 +163,7 @@
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>${frontend-maven-plugin.version}</version>
 				<configuration>
+					<skip>${skip.npm.build}</skip>
 					<nodeVersion>${node.version}</nodeVersion>
 					<npmVersion>${npm.version}</npmVersion>
 					<workingDirectory>target</workingDirectory>
@@ -194,6 +208,7 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>${jacoco.version}</version>
 				<configuration>
+					<skip>${skip.sonar.build}</skip>
 					<systemPropertyVariables>
 						<jacoco-agent.destfile>${sonar.jacoco.reportPath}</jacoco-agent.destfile>
 					</systemPropertyVariables>
@@ -224,6 +239,9 @@
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>${sonar-maven-plugin.version}</version>
+				<configuration>
+					<skip>${skip.sonar.build}</skip>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -258,6 +276,7 @@
 				<version>${io.fabric8.version}</version>
 				<inherited>false</inherited>
 				<configuration>
+					<skip>${skip.docker.build}</skip>
 					<dockerHost>${io.fabric8.dockerHost}</dockerHost>
 					<verbose>true</verbose>
 					<images>
@@ -298,6 +317,7 @@
 				<artifactId>fabric8-maven-plugin</artifactId>
 				<version>${fabric8-maven-plugin.version}</version>
 				<configuration>
+					<skip>${skip.kube.build}</skip>
 					<verbose>true</verbose>
 					<generateRoute>false</generateRoute>
 					<dockerHost>${io.fabric8.dockerHost}</dockerHost>
